--- a/style.css
+++ b/style.css
@@ -1,129 +1,183 @@
-body{
-    margin:0;
-    font-family: 'Roboto' , sans-serif;
-}
+/* font-family: 'Playfair Display', serif;
+font-family: 'Roboto', sans-serif; */
 
-*,*::before,*::after{
+*, *::before, *::after {
     box-sizing: border-box;
 }
 
-.header{
-    background-color: #136C72;
-}
-
-.nav{
-display: none;
-}
-.mobileHeader{
-    padding:3rem 1rem;
-    display: flex;
-    align-items: center;
-
-    
-}
-
-.mobileHeader button{
-    padding: 1rem;
-    border-radius: 50%;
-    border: none;
-    background-color: #072A2D;
-    width: 12%;
-    height: 10%;
-    
-}
-
-
-
-.container{
-    max-width: 1100px;
-    width: 90%;
-    margin: 0 auto;
-    padding:1rem 1rem;
+body {
+    margin: 0;
+    font-family: 'Roboto', sans-serif;
+    font-size: 1.3rem;
 }
 
 img{
     max-width: 100%;
 }
 
-.hero{
-    font-size: 1.5rem;
-    background-color: #23424A;
-    color:white;
-    
+h1{
+    font-size: 3rem;
+    margin:0;
+}
+.section-title{
+    color: #87629A;
 }
 
-.hero__text p{
-    line-height: 1.5;
+.btn {
+    display: inline-block;
+    text-decoration: none;
+    text-transform: uppercase; 
+    color: #23424A;
+    font-weight: 900;
+    background-color: #38CFD9;
+    padding: .75em 2em;
+    border-radius: 100px;
+}
+
+.btn:hover,
+.btn:focus {
+    opacity: .75; 
+}
+
+.container{
+    position: relative;
+    width: 80%;
+    max-width: 1100px;
+    margin: 0 auto;
+}
+
+.hero {
+    padding: 100px 0;
+    background-color: #23424A;
+    color: #FFF;
+}
+.hero__img {
+    margin-top: 2em;
+}
+
+.hero p {
+    margin-bottom: 3em;
+}
+
+
+.main {
+    margin-top: 3em;
+}
+
+.sidebar {
+    padding: 1em;
+    text-align: center;
+    color: #fff;
+    background-color: #136c72;
+
+}
+
+header{
+    background: #136c72;
+    padding:1em 0;
+    text-align: center;
+}
+
+.hamburger{
+    position: absolute;
+    border: none;
+    background-color: transparent;
+    left: 0;
+    top:-10px;
+    
+}
+.hamburger .line{
+    display: block;
+    width: 30px;
+    height: 3px;
+    background-color: white;
+    margin-top: 10px;
+    transition: transform .3s linear;
+}
+.hamburger.active .line:nth-child(1){
+    transform: rotate(45deg) translateY(18px);
+}
+.hamburger.active .line:nth-child(2){
+    opacity: 0;
+}
+.hamburger.active .line:nth-child(3){
+    transform: rotate(-45deg) translateY(-18px);
+}
+
+
+nav{
+    display: none;
+}
+
+nav.active{
+    font-size: 1.5rem;
+    display: block;
+}
+.nav__item{
+    list-style: none;
+    
+}
+.nav__item + .nav__item{
+    margin-top: .5rem;
+}
+.nav__link--button{
+    margin-top: .25rem;
+    background-color:#23424A;
+    border-radius: 900px;
+    color:#136c72;
+    padding:.25em 1em;
+}
+ul{
+    padding:0;
+}
+
+li:nth-child(3){
     margin-bottom: 2rem;
 }
 
-.btn{
-    text-transform: uppercase;
-    font-size: large;
-    border-radius: 900px;
-    padding :.5em 1em; 
-    font-weight: 600;
-    text-decoration: none;
-    color: #072A2D;
-    background-color:rgb(24, 231, 231) ;
-}
-
-.hero_image{
-    margin: 4rem 0;
-}
-
-.left h2{
-    font-size: 2.5rem;
-    color:#136C72;
-}
-
-.left p{
-font-size: 1.5rem;
-line-height: 1.5;
-}
-
-.right{
-    font-size:1.5rem ;
-    padding: 3rem 1.5rem;
-    text-align: center;
-    background-color:#136C72;
+.nav__item a{
     color:white;
+    text-decoration: none;
 }
 
-@media (min-width:700px){
-.container{
+@media (min-width:700px) {
+.row{
     display: flex;
     justify-content: space-between;
-    align-items: flex-start;
 }
-.hero__text p{
-    margin-bottom: 3rem;
+.hero__text {
+    width: 62%;
 }
-.hero{
-    padding:4rem 0 ;
+.hero__img {
+    width: 32%;
+    align-self: flex-start;
+    margin: 0;
 }
-
-.hero h1{
-    margin-top: 0;
+.primary-content{
+    width: 62%;
 }
-.hero__text
-{
-    width: 60%;
-}
-.hero_image{
-    width: 30%;
-    margin-top: 0;
-}
-.left{
-    width: 60%;
-}
-.right{
-    padding:3rem;
-    width: 30%;
+.sidebar {
+    width: 32%;
 }
 
-.two-col{
-    margin-top: 2rem;
+nav{
+    display: flex;
+   
 }
 
+.hamburger{
+    display: none;
+}
+.nav__list--primary{
+    display: flex;
+    align-items: center;
+}
+
+.nav__list--secondary{
+    display: flex;
+    align-items: center;
+}
+.nav__item + .nav__item{
+    margin-left: 1rem;
+}
 }
