--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ h1{
 }
 
 .container{
-    position: relative;
+    
     width: 80%;
     max-width: 1100px;
     margin: 0 auto;
@@ -75,15 +75,14 @@ h1{
 header{
     background: #136c72;
     padding:1em 0;
-    text-align: center;
+    /* text-align: center; */
 }
 
 .hamburger{
-    position: absolute;
+    
+   padding: 0;
     border: none;
     background-color: transparent;
-    left: 0;
-    top:-10px;
     
 }
 .hamburger .line{
@@ -91,8 +90,14 @@ header{
     width: 30px;
     height: 3px;
     background-color: white;
-    margin-top: 10px;
+    margin:  10px 0 0 0;
     transition: transform .3s linear;
+    
+}
+
+.hamburger .line:nth-child(3)
+{
+    margin-bottom: 10px;
 }
 .hamburger.active .line:nth-child(1){
     transform: rotate(45deg) translateY(18px);
@@ -103,15 +108,27 @@ header{
 .hamburger.active .line:nth-child(3){
     transform: rotate(-45deg) translateY(-18px);
 }
+.row{
+    display: block;
+}
 
-
+.open{
+    display: flex;
+    align-items: center;
+    
+}
+.link{
+   margin: 0 auto;
+}
 nav{
     display: none;
 }
 
 nav.active{
-    font-size: 1.5rem;
+   
     display: block;
+    font-size: 1.5rem;
+    text-align: center;
 }
 .nav__item{
     list-style: none;
@@ -127,9 +144,7 @@ nav.active{
     color:#136c72;
     padding:.25em 1em;
 }
-ul{
-    padding:0;
-}
+
 
 li:nth-child(3){
     margin-bottom: 2rem;
@@ -140,10 +155,13 @@ li:nth-child(3){
     text-decoration: none;
 }
 
-@media (min-width:700px) {
+
+
+@media (min-width:820px) {
 .row{
     display: flex;
     justify-content: space-between;
+   
 }
 .hero__text {
     width: 62%;
@@ -159,25 +177,41 @@ li:nth-child(3){
 .sidebar {
     width: 32%;
 }
-
-nav{
-    display: flex;
-   
-}
-
 .hamburger{
     display: none;
 }
-.nav__list--primary{
+
+.row{
+    display: flex;
+}
+nav{
+    display: block;
+}
+.nav__list{
     display: flex;
     align-items: center;
+    
+   
+}
+li a{
+    margin-left: 2rem;
 }
 
-.nav__list--secondary{
+
+
+.row2{
     display: flex;
-    align-items: center;
 }
+.nav{
+ 
+    display: flex;
+   }
+
+
 .nav__item + .nav__item{
-    margin-left: 1rem;
+    margin-top: 0;
+}
+li:nth-child(3){
+    margin-bottom: 0;
 }
 }
